--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.title {
+  width: 100%;
+  height:2.5em;
+  color:aliceblue;
+  font-size:1.3em;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
