--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,38 @@
+:root {
+  width: 100%;
+  margin:0%;
+  padding:0%;
+ 
+}
+
+ * {
+  margin:0%;
+  padding:0%;
+} 
+
+body {
+  width: 100%;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: rgb(209, 205, 205);
+
+}
+
+
+.CvAccueil{
+  padding:5px 5 px 5px 5px;
+}
+
+#containerAccueil{
+
+ 
+  max-width: 100%;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 .title {
   width: 100%;
   height:2.5em;
@@ -45,3 +42,9 @@
   padding-top: 10px;
 }
 
+
+@media (max-width: 280px){ .unfold-notice { display: block !important; }} 
+.th{
+  width:60px;
+
+}
