--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   width: 100%;
   margin:0%;
   padding:0%;
@@ -9,6 +9,7 @@
   margin:0%;
   padding:0%;
 } 
+*/
 
 body {
   width: 100%;
